--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,9 +17,12 @@ const { tab_title, description, page_title } = Astro.props;
   <head>
     <!-- Global Metadata -->
     <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <!-- Plasubile Analytics -->
     <script
       src="/stats/js/script.js"
