--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,8 +8,10 @@ interface Props {
 import "../styles/globals.css";
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
+import Seo from "../components/Seo.astro";
 
-const { tab_title, description, page_title } = Astro.props;
+const { tab_title, description, page_title, title, images, frontmatter } =
+  Astro.props;
 ---
 
 <!doctype html>
@@ -19,10 +21,10 @@ const { tab_title, description, page_title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <!-- Plasubile Analytics -->
     <script
       src="/stats/js/script.js"
@@ -33,8 +35,8 @@ const { tab_title, description, page_title } = Astro.props;
 
     <!-- Primary Meta Tags -->
     <title>{tab_title}</title>
-    <meta name="title" content={tab_title} />
     <meta name="description" content={description} />
+    <Seo {title} {description} {images} {frontmatter} />
   </head>
 
   <body>
