--- a/src/components/Seo.astro
+++ b/src/components/Seo.astro
@@ -1,13 +1,7 @@
 ---
 import siteDefaultData from "../data/siteDefaultData.json";
 
-const {
-  title,
-  description,
-  url = Astro.url,
-  images,
-  frontmatter,
-} = Astro.props;
+const { title, description, url = Astro.url, images } = Astro.props;
 ---
 
 <!-- SEO -->
