--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Register your custom font family and tell the browser where to find it. */
+@font-face {
+  font-family: "GeistVF";
+  src: url("/fonts/GeistVF.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "GeistMonoVF";
+  src: url("/fonts/GeistMonoVF.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+body {
+  font-family: "Geist";
+}
+
+footer {
+  font-family: "GeistMono";
+}
