--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,12 +2,12 @@
 const today = new Date();
 ---
 
-<footer class="text-center">
+<footer class="pb-4 text-center">
   <hr class="my-8 h-px border-0 bg-gray-400" />
    &copy; {today.getFullYear()}
-  <span class="p-1 font-semibold underline"
+  <span class="p-1 font-semibold underline underline-offset-1"
     ><a href="https://github.com/Mordi490" class="inline-flex"
-      >Mordi <span>
+      >Mordi <span class="ml-1">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="22"
@@ -21,5 +21,11 @@ const today = new Date();
         ></span
       ></a
     ></span
-  >. All rights reserved.
+  >
+   Powered by <span
+    ><a
+      href="https://astro.build/"
+      class="font-semibold underline underline-offset-1">Astro</a
+    ></span
+  >
 </footer>
