--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,20 +1,19 @@
 ---
-interface Props {
-  tab_title: string;
-  description: string;
-  page_title?: string;
-  title?: string;
-  images?: {
-    src: string;
-  }[];
-}
-
 import "../styles/globals.css";
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import Seo from "../components/Seo.astro";
 
-const { tab_title, description, page_title, title, images } = Astro.props;
+interface Props {
+  tab_title: string;
+  description: string;
+  page_title?: string;
+  seo_title?: string;
+  seo_image?: string;
+}
+
+const { tab_title, description, page_title, seo_title, seo_image } =
+  Astro.props;
 ---
 
 <!doctype html>
@@ -23,11 +22,13 @@ const { tab_title, description, page_title, title, images } = Astro.props;
     <!-- Global Metadata -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
+
     <!-- Plasubile Analytics -->
     <script
       src="/stats/js/script.js"
@@ -39,9 +40,8 @@ const { tab_title, description, page_title, title, images } = Astro.props;
     <!-- Primary Meta Tags -->
     <title>{tab_title}</title>
     <meta name="description" content={description} />
-    <Seo {title} {description} {images} />
+    <Seo title={seo_title} {description} {seo_image} />
   </head>
-
   <body>
     <Header />
     <div class="flex h-screen flex-col">
