--- a/src/pages/oppskrifter/[...page].astro
+++ b/src/pages/oppskrifter/[...page].astro
@@ -28,6 +28,7 @@ const posts = page.data;
   description="Samling av oppskrifter"
   tab_title="Oppskrifter"
   page_title="Liste over alle oppskrifter"
+  seo_title="Liste over alle oppskrifter"
 >
   <RecipeListView posts={posts} page={page} />
   <Pagination prevUrl={page.url.prev} nextUrl={page.url.next} url={page.url} />
