--- a/src/layouts/RecipePost.astro
+++ b/src/layouts/RecipePost.astro
@@ -3,16 +3,18 @@ import type { CollectionEntry } from "astro:content";
 import Layout from "./Layout.astro";
 import ResponsiveImage from "../components/ResponsiveImage.astro";
 
-type Props = CollectionEntry<"oppskrifter">["data"];
+type Props = CollectionEntry<"oppskrifter">["data"] & {
+  seo_image?: string;
+};
 
-const { title, tags, ingredienser, images, tattFra } = Astro.props;
+const { title, tags, ingredienser, images, tattFra, seo_image } = Astro.props;
 ---
 
 <Layout
   description={`Oppskrift for: ${title}`}
   tab_title={title}
-  {images}
-  {title}
+  seo_title={title}
+  {seo_image}
 >
   <section class="prose prose-lg mx-auto px-2 py-4 lg:prose-xl">
     {
