--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -7,6 +7,7 @@ export const prerender = false;
 <Layout
   description={`Søk etter oppskrifter`}
   tab_title={`Søk etter oppskrifter`}
+  seo_title="Søk etter oppskrifter"
 >
   <div class="flex flex-col items-center pb-2 pt-4">
     <aside
