removed unused, empty file

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,9 @@ import HeaderLink from "./HeaderLink.astro";
       class="mx-auto flex w-full max-w-3xl justify-around"
     >
       <HeaderLink href="/" aria-label="Hjem">Hjem</HeaderLink>
-      <HeaderLink href="/oppskrifter" aria-label="Oppskrifter">Oppskrifter</HeaderLink>
+      <HeaderLink href="/oppskrifter" aria-label="Oppskrifter">
+        Oppskrifter
+      </HeaderLink>
       <HeaderLink href="/about" aria-label="Om siden">Om siden</HeaderLink>
       <HeaderLink href="/search" aria-label="Søk">
         <span class="flex items-center">
