--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,9 +31,9 @@ const { tab_title, description, page_title, seo_title, seo_image } =
 
     <!-- Plasubile Analytics -->
     <script
-      src="/stats/js/script.js"
-      data-api="/stats/api/event"
-      data-domain="bentesoppskrifter.no"></script>
+      defer
+      data-domain="bentesoppskrifter.no"
+      src="https://mordi.dev/js/script.js"></script>
 
     <meta name="generator" content={Astro.generator} />
 
