updated analytics URL

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,7 +33,7 @@ const { tab_title, description, page_title, seo_title, seo_image } =
     <script
       defer
       data-domain="bentesoppskrifter.no"
-      src="https://mordi.dev/js/script.js"></script>
+      src="https://analytics.mordi.dev/js/script.js"></script>
 
     <meta name="generator" content={Astro.generator} />
 
