--- a/src/components/Recipe.astro
+++ b/src/components/Recipe.astro
@@ -9,7 +9,7 @@ const { post, aboveTheFold } = Astro.props;
 
 <a href={`${Astro.url.origin}/oppskrifter/${post.slug}`}>
   <h2
-    class="px-4 py-2 text-lg font-semibold first-letter:capitalize hover:underline active:underline"
+    class="px-4 py-2 text-lg font-bold first-letter:capitalize hover:underline active:underline"
   >
     {post.data.title}
   </h2>
