--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,7 +50,7 @@ const { tab_title, description, page_title, seo_title, seo_image } =
           <h5 class="py-2 text-center text-3xl font-bold">{page_title}</h5>
         )
       }
-      <main class="mx-auto flex-grow px-1 text-lg">
+      <main class="mx-auto flex-grow px-1">
         <slot />
       </main>
       <Footer />
