--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,8 +4,8 @@ const today = new Date();
 
 <footer class="pb-4 text-center">
   <hr class="my-8 h-px border-0 bg-gray-400" />
-   &copy; {today.getFullYear()}
-  <span class="p-1 font-semibold underline underline-offset-1"
+  &copy; {today.getFullYear()}
+  <span class="p-1 font-bold underline underline-offset-1"
     ><a href="https://github.com/Mordi490" class="inline-flex"
       >Mordi <span class="ml-1">
         <svg
@@ -22,10 +22,10 @@ const today = new Date();
       ></a
     ></span
   >
-   Powered by <span
+  Powered by <span
     ><a
       href="https://astro.build/"
-      class="font-semibold underline underline-offset-1">Astro</a
+      class="font-bold underline underline-offset-1">Astro</a
     ></span
   >
 </footer>
