--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,14 +12,14 @@ import { Image } from "astro:assets";
   description="Bakgrunn for siden"
   tab_title="Om Siden"
 >
-  <div class="mx-auto max-w-4xl">
+  <div class="mx-auto max-w-4xl text-xl">
     <p>
       Bente har alltid vært opptatt av baking og matlaging, og gjennom årene har
       det blitt samlet mange oppskrifter. Oppskriftene kan være ut klipp av
       magasiner, aviser, skrevet på ark eller handlelapper, utskrifter fra nett.
       Men alt er skrevet på papir og oppbevares i en gammel, nokså nedslit <span
         class="italic">tidsskriftkassett</span
-      >. , eller så ligger de løst i en pose med tidsskriftkassetten.
+      >, eller så ligger de løst i en pose med tidsskriftkassetten.
     </p>
 
     <div class="mx-auto flex max-w-lg justify-center pb-4 pt-2">
