--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,27 +2,37 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Register your custom font family and tell the browser where to find it. */
+/* Normal Text */
 @font-face {
-  font-family: "GeistVF";
-  src: url("/fonts/GeistVF.woff2") format("woff2");
-  font-weight: normal;
+  font-family: "Atkinson-Hyperlegible";
+  src:
+    url("/fonts/Atkinson-Hyperlegible-Regular-102a.woff2") format("woff2"),
+    url("/fonts/Atkinson-Hyperlegible-Regular-102.woff") format("woff");
+  font-weight: 400;
   font-style: normal;
-  font-display: swap;
 }
 
+/* Bold Text */
 @font-face {
-  font-family: "GeistMonoVF";
-  src: url("/fonts/GeistMonoVF.woff2") format("woff2");
-  font-weight: normal;
+  font-family: "Atkinson-Hyperlegible";
+  src:
+    url("/fonts/Atkinson-Hyperlegible-Bold-102a.woff2") format("woff2"),
+    url("/fonts/Atkinson-Hyperlegible-Bold-102.woff") format("woff");
+  font-weight: 700;
   font-style: normal;
-  font-display: swap;
 }
 
-body {
-  font-family: "Geist", sans-serif;
+/* Italic Text */
+@font-face {
+  font-family: "Atkinson-Hyperlegible";
+  src:
+    url("/fonts/Atkinson-Hyperlegible-Italic-102a.woff2") format("woff2"),
+    url("/fonts/Atkinson-Hyperlegible-Italic-102.woff") format("woff");
+  font-weight: 400;
+  font-style: italic;
 }
 
-footer {
-  font-family: "GeistMono";
+html {
+  letter-spacing: 0.02em;
+  font-family: "Atkinson-Hyperlegible", system-ui, sans-serif;
 }
