--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -94,7 +94,7 @@ export const prerender = false;
     return results
       .map((res: RecipeSearchResultItem) => {
         const { slug, title } = res.item;
-        return `<li class="text-lg font-bold active:underline hover:underline rounded-full px-4 py-2 truncate">
+        return `<li class="text-lg font-bold active:underline hover:underline rounded-full px-4 py-2">
                 <a href="/oppskrifter/${slug}">${title}</a>
                 </li>`;
       })
@@ -160,7 +160,7 @@ export const prerender = false;
   window.addEventListener("DOMContentLoaded", () => {
     const urlParams = new URLSearchParams(window.location.search).get(
       "q",
-    ) as string; // TODO: better handling of null
+    ) as string;
     updateDocumentTitle(urlParams);
     fetchSearchResult(urlParams);
     updateSearchReadOut(urlParams);
