--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,28 +12,10 @@ import HeaderLink from "./HeaderLink.astro";
       <HeaderLink href="/oppskrifter" aria-label="Oppskrifter">
         Oppskrifter
       </HeaderLink>
-      <HeaderLink href="/about" aria-label="Om siden">Om siden</HeaderLink>
       <HeaderLink href="/search" aria-label="Søk">
         <span class="flex items-center">
-          <span class="hidden sm:inline-flex">
+          <span class="inline-flex">
             Søk
-            <span class="ml-1 inline-flex items-center">
-              <svg
-                width="32"
-                height="32"
-                viewBox="0 0 15 15"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M10 6.5C10 8.433 8.433 10 6.5 10C4.567 10 3 8.433 3 6.5C3 4.567 4.567 3 6.5 3C8.433 3 10 4.567 10 6.5ZM9.30884 10.0159C8.53901 10.6318 7.56251 11 6.5 11C4.01472 11 2 8.98528 2 6.5C2 4.01472 4.01472 2 6.5 2C8.98528 2 11 4.01472 11 6.5C11 7.56251 10.6318 8.53901 10.0159 9.30884L12.8536 12.1464C13.0488 12.3417 13.0488 12.6583 12.8536 12.8536C12.6583 13.0488 12.3417 13.0488 12.1464 12.8536L9.30884 10.0159Z"
-                  fill="currentColor"
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"></path>
-              </svg>
-            </span>
-          </span>
-          <span class="inline-flex sm:hidden">
             <span class="ml-1 inline-flex items-center">
               <svg
                 width="32"
