followed migration guide, id is the new slug

--- a/src/components/Recipe.astro
+++ b/src/components/Recipe.astro
@@ -7,7 +7,7 @@ type Props = {
 const { post, aboveTheFold } = Astro.props;
 ---
 
-<a href={`${Astro.url.origin}/oppskrifter/${post.slug}`}>
+<a href={`${Astro.url.origin}/oppskrifter/${post.id}`}>
   <h2
     class="px-4 py-2 text-lg font-bold first-letter:capitalize hover:underline active:underline"
   >
