--- a/src/components/RecipeListView.astro
+++ b/src/components/RecipeListView.astro
@@ -9,7 +9,8 @@ type Props = {
 };
 
 // Page might be needed for more granular/advanced pagination setup. see https://philna.sh/blog/2023/07/13/easy-and-accessible-pagination-links-for-your-astro-collections/
-const { posts, page } = Astro.props;
+
+const { posts } = Astro.props;
 ---
 
 <section class="pb-2">
