--- a/src/layouts/RecipePost.astro
+++ b/src/layouts/RecipePost.astro
@@ -1,7 +1,7 @@
 ---
 import type { CollectionEntry } from "astro:content";
 import Layout from "./Layout.astro";
-import { Image, imageConfig } from "astro:assets";
+import { Image } from "astro:assets";
 
 type Props = CollectionEntry<"oppskrifter">["data"] & {
   seo_image?: string;
