--- a/src/pages/oppskrifter/[...page].astro
+++ b/src/pages/oppskrifter/[...page].astro
@@ -6,6 +6,8 @@ import type { GetStaticPathsOptions, Page } from "astro";
 import RecipeListView from "../../components/RecipeListView.astro";
 import { PER_PAGE } from "../../const";
 
+export const prerender = true;
+
 export async function getStaticPaths({ paginate }: GetStaticPathsOptions) {
   const oppskrifter = await getCollection("oppskrifter");
 
@@ -20,7 +22,7 @@ interface Post {
   page: Page<CollectionEntry<"oppskrifter">>;
 }
 
-const { page } = Astro.props;
+const { page } = Astro.props as Post;
 const posts = page.data;
 ---
 
