--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -1,7 +1,5 @@
 ---
 import Layout from "../layouts/Layout.astro";
-
-export const prerender = false;
 ---
 
 <Layout
@@ -61,7 +59,7 @@ export const prerender = false;
     threshold: 0.4,
     keys: [
       {
-        name: "slug",
+        name: "id",
         weight: 0.6,
       },
       {
@@ -93,9 +91,9 @@ export const prerender = false;
   function generateSearchList(results: any) {
     return results
       .map((res: RecipeSearchResultItem) => {
-        const { slug, title } = res.item;
+        const { id, title } = res.item;
         return `<li class="text-lg font-bold active:underline hover:underline rounded-full px-4 py-2">
-                <a href="/oppskrifter/${slug}">${title}</a>
+                <a href="/oppskrifter/${id}">${title}</a>
                 </li>`;
       })
       .join("");
@@ -130,7 +128,7 @@ export const prerender = false;
 
   type RecipeSearchResultItem = {
     item: {
-      slug: string;
+      id: string;
       title: string;
       ingredienser: string[];
       tattFra?: string;
