change to newer locale code

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ const { tab_title, description, page_title, seo_title, seo_image } =
 ---
 
 <!doctype html>
-<html lang="no" class="bg-slate-100">
+<html lang="nb-NO" class="bg-slate-100">
   <head>
     <!-- Global Metadata -->
     <meta charset="UTF-8" />
