--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,6 +11,7 @@ import { Image } from "astro:assets";
   page_title="Om Siden"
   description="Bakgrunn for siden"
   tab_title="Om Siden"
+  seo_image=`${Astro.url.origin}/og/about.png`
 >
   <div class="mx-auto max-w-4xl text-xl">
     <p>
