--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -6,6 +6,7 @@ import Layout from "../layouts/Layout.astro";
   description={`Søk etter oppskrifter`}
   tab_title={`Søk etter oppskrifter`}
   seo_title="Søk etter oppskrifter"
+  seo_image=`${Astro.url.origin}/og/search.png`
 >
   <div class="flex flex-col items-center pb-2 pt-4">
     <aside
