--- a/src/pages/oppskrifter/[...page].astro
+++ b/src/pages/oppskrifter/[...page].astro
@@ -29,6 +29,7 @@ const posts = page.data;
   tab_title="Oppskrifter"
   page_title="Liste over alle oppskrifter"
   seo_title="Liste over alle oppskrifter"
+  seo_image=`${Astro.url.origin}/og/oppskrifter.png`
 >
   <RecipeListView posts={posts} page={page} />
   <Pagination prevUrl={page.url.prev} nextUrl={page.url.next} url={page.url} />
