Migrate to astro-og-canvas from Satori (#2)
* add & remove deps

* new preview-image-variation

* migrate to astro-og-canvas + static output change

* fixed link for dev env

* og-images for static pages

* use new og-images on pages

* remove unused image and font

--- a/src/pages/oppskrifter/[...page].astro
+++ b/src/pages/oppskrifter/[...page].astro
@@ -6,8 +6,6 @@ import type { GetStaticPathsOptions, Page } from "astro";
 import RecipeListView from "../../components/RecipeListView.astro";
 import { PER_PAGE } from "../../const";
 
-export const prerender = true;
-
 export async function getStaticPaths({ paginate }: GetStaticPathsOptions) {
   const oppskrifter = await getCollection("oppskrifter");
 
@@ -31,6 +29,7 @@ const posts = page.data;
   tab_title="Oppskrifter"
   page_title="Liste over alle oppskrifter"
   seo_title="Liste over alle oppskrifter"
+  seo_image=`${Astro.url.origin}/og/oppskrifter.png`
 >
   <RecipeListView posts={posts} page={page} />
   <Pagination prevUrl={page.url.prev} nextUrl={page.url.next} url={page.url} />
