--- a/src/components/Seo.astro
+++ b/src/components/Seo.astro
@@ -7,6 +7,7 @@ interface Props {
 }
 
 const { title, description, url = Astro.url, seo_image } = Astro.props;
+const siteUrl = Astro.url.origin;
 ---
 
 <link rel="canonical" href={url} />
@@ -16,7 +17,10 @@ const { title, description, url = Astro.url, seo_image } = Astro.props;
 <meta property="og:title" content={title || "Bentes Oppskrifter"} />
 <meta property="og:description" content={description} />
 <meta property="og:url" content={url} />
-<meta property="og:image" content={seo_image || "/preview-image.png"} />
+<meta
+  property="og:image"
+  content={seo_image || siteUrl + "/preview-image-60-opacity.png"}
+/>
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
 
