ignore titles in list view, and about page content

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,7 +13,7 @@ import { Image } from "astro:assets";
   tab_title="Om Siden"
   seo_image=`${Astro.url.origin}/og/about.png`
 >
-  <div class="mx-auto max-w-4xl text-xl">
+  <div class="mx-auto max-w-4xl text-xl" data-pagefind-ignore>
     <p>
       Bente har alltid vært opptatt av baking og matlaging, og gjennom årene har
       det blitt samlet mange oppskrifter. Oppskriftene kan være ut klipp av
