--- a/src/layouts/RecipePost.astro
+++ b/src/layouts/RecipePost.astro
@@ -17,18 +17,19 @@ const { title, tags, ingredienser, images, tattFra, seo_image } = Astro.props;
   {seo_image}
 >
   <section
-    class="prose prose-lg mx-auto px-2 py-4 leading-6 lg:prose-xl lg:leading-6"
+    class="prose mx-auto py-4 leading-6 lg:prose-lg xl:prose-xl lg:leading-6"
   >
     {
       tattFra && (
-        <p class="rounded bg-gray-300 p-2 sm:w-5/6 md:w-2/3">
+        <p class="w-fit rounded bg-gray-300 p-2">
           <span class="font-bold">NB! </span>Denne oppskriften er fra eller
           basert på denne:
-          <span>
-            <a href={tattFra} class="font-bold underline underline-offset-1">
-              {tattFra}
-            </a>
-          </span>
+          <a
+            href={tattFra}
+            class="block break-all font-bold underline underline-offset-1"
+          >
+            {tattFra}
+          </a>
         </p>
       )
     }
