good enough rss-indicator

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,32 +5,55 @@ const today = new Date();
 <footer class="pb-4 text-center">
   <hr class="my-8 h-px border-0 bg-gray-400" />
   <div class="flex flex-col space-y-4">
-    <a href="/about" class="font-bold hover:underline">Om Siden</a>
+    <div class="flex justify-center space-x-4">
+      <a href="/about" class="font-bold hover:underline">Om Siden</a>
+      <a
+        href="/rss.xml"
+        class="inline-flex items-center font-bold hover:underline"
+      >
+        RSS
+        <svg
+          class="ml-1"
+          width="20"
+          height="20"
+          viewBox="0 0 256 256"
+          fill="#F88425"
+        >
+          <path d="M48 48v32a128 128 0 0 1 128 128h32A160 160 0 0 0 48 48Z"
+          ></path>
+          <path d="M48 112v32a64 64 0 0 1 64 64h32a96 96 0 0 0-96-96Z"></path>
+          <circle cx="68" cy="188" r="20"></circle>
+        </svg>
+      </a>
+    </div>
     <div class="">
       &copy; {today.getFullYear()}
-      <span class="p-1 font-bold underline underline-offset-1"
-        ><a href="https://github.com/Mordi490" class="inline-flex"
-          >Mordi <span class="ml-1">
+      <span class="p-1 font-bold underline underline-offset-1">
+        <a href="https://github.com/Mordi490" class="inline-flex">
+          Mordi
+          <span class="ml-1">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="22"
               height="22"
               viewBox="0 0 15 15"
-              ><path
+            >
+              <path
                 fill="currentColor"
                 fill-rule="evenodd"
                 d="M7.5.25a7.25 7.25 0 0 0-2.292 14.13c.363.066.495-.158.495-.35c0-.172-.006-.628-.01-1.233c-2.016.438-2.442-.972-2.442-.972c-.33-.838-.805-1.06-.805-1.06c-.658-.45.05-.441.05-.441c.728.051 1.11.747 1.11.747c.647 1.108 1.697.788 2.11.602c.066-.468.254-.788.46-.969c-1.61-.183-3.302-.805-3.302-3.583a2.8 2.8 0 0 1 .747-1.945c-.075-.184-.324-.92.07-1.92c0 0 .61-.194 1.994.744A6.963 6.963 0 0 1 7.5 3.756A6.97 6.97 0 0 1 9.315 4c1.384-.938 1.992-.743 1.992-.743c.396.998.147 1.735.072 1.919c.465.507.745 1.153.745 1.945c0 2.785-1.695 3.398-3.31 3.577c.26.224.492.667.492 1.343c0 .97-.009 1.751-.009 1.989c0 .194.131.42.499.349A7.25 7.25 0 0 0 7.499.25Z"
-                clip-rule="evenodd"></path></svg
-            ></span
-          ></a
-        ></span
-      >
-      Powered by <span
-        ><a
+                clip-rule="evenodd"></path>
+            </svg>
+          </span>
+        </a>
+      </span>
+      Powered by
+      <span>
+        <a
           href="https://astro.build/"
           class="font-bold underline underline-offset-1 md:ml-1">Astro</a
-        ></span
-      >
+        >
+      </span>
     </div>
   </div>
 </footer>
