removed underline from GitHub icon

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -28,8 +28,11 @@ const today = new Date();
     </div>
     <div class="">
       &copy; {today.getFullYear()}
-      <span class="p-1 font-bold underline underline-offset-1">
-        <a href="https://github.com/Mordi490" class="inline-flex">
+      <span class="p-1 font-bold">
+        <a
+          href="https://github.com/Mordi490"
+          class="inline-flex underline underline-offset-1"
+        >
           Mordi
           <span class="ml-1">
             <svg
