added target & rel to outgoing links

--- a/src/layouts/RecipePost.astro
+++ b/src/layouts/RecipePost.astro
@@ -26,6 +26,8 @@ const { title, tags, ingredienser, images, tattFra, seo_image } = Astro.props;
           basert på denne:
           <a
             href={tattFra}
+            target="_blank"
+            rel="noopener noreferrer"
             class="block break-all font-bold underline underline-offset-1"
           >
             {tattFra}
